--- a/project/dadablog/client/templates/login.html
+++ b/project/dadablog/client/templates/login.html
@@ -32,8 +32,9 @@ A ny individuals and organizations and not for commercial use, professiona websi
 	</div>
 	
 </body>
-//url /v1/tokens
+
 <script>
+	// url /v1/tokens
 	function login(){
 		var username = $('.username').val()
 		var password = $('.password').val()
@@ -50,6 +51,7 @@ A ny individuals and organizations and not for commercial use, professiona websi
 					window.localStorage.setItem('dnblog_token', result.data.token)
 					window.localStorage.setItem('dnblog_user', result.username)
 					alert('登录成功')
+					window.location.href = '/' + result.username + '/topics'
 				}else{
 					alert(result.error)
 				}
